2005-05-25
	* patch from Peter van Dijk <peter@nextgear.nl> to make
	  stderr unbuffered, for running under daemontools

2005-04-04
	* patch from Don MacAskill <don@smugmug.com> 'flush_all' doesn't
	seem to work properly.  Basically, if you try to add a key which
	is present, but expired, the store fails but the old key is no
	longer expired.

	* release 1.1.12

2005-01-14
	* Date: Thu, 18 Nov 2004 15:25:59 -0600
	  From: David Phillips <electrum@gmail.com>
	Here is a patch to configure.ac and Makefile.am to put the man page in
	the correct location.  Trying to install the man page from a
	subdirectory results in the subdirectory being used in the install
	path (it tries to install to doc/memcached.1).  This is the correct
	thing to  do:

	- create a Makefile.am in the doc directory that installs the man page
	  with man_MANS
	- modify Makefile.am in the base directory to reference the doc
  	  directory using SUBDIRS
	- modify the AC_CONFIG_FILES macro in configure.ac to output the 
	  Makefile in doc

	
2005-01-14
	* pidfile saving support from Lisa Seelye <lisa@gentoo.org>, sent
	  Jan 13, 2005

2005-01-14
	* don't delete libevent events that haven't been added (the deltimer)
	  patch from Ted Schundler <tschundler@gmail.com>

2004-12-10
	* document -M and -r in manpage (Doug Porter <dsp@dsp.name>)

2004-07-22
	* fix buffer overflow in items.c with 250 byte keys along with
	  other info on the same line going into a 256 byte char[].
	  thanks to Andrei Nigmatulin <anight@monamour.ru>
	
2004-06-15
	* immediate deletes weren't being unlinked a few seconds,
	  preventing "add" commands to the same key in that time period.
	  thanks to Michael Alan Dorman <mdorman@debian.org> for the
	  bug report and demo script.
	
2004-04-30
	* released 1.1.11

2004-04-24
	* Avva: Add a new command line option: -r , to maximize core file
	limit.

2004-03-31
	* Avva: Use getrlimit and setrlimit to set limits for number of